{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 182,
  "lineage": "6f5635c7-30c6-1f05-7837-0deb4006a71d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "mendedi-rg-lb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "name": "mendedi-rg-lb-frontend-ip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg/providers/Microsoft.Network/publicIPAddresses/mendedi-rg-public-ip"
              }
            ],
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg/providers/Microsoft.Network/loadBalancers/mendedi-rg-lb",
            "location": "canadacentral",
            "name": "mendedi-rg-lb",
            "resource_group_name": "mendedi-rg",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_public_ip.mendedi-rg-lb-public-ip",
            "azurerm_resource_group.mendedi-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "mendedi-rg-lb-backend-pool",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg/providers/Microsoft.Network/loadBalancers/mendedi-rg-lb/backendAddressPools/mendedi-rg-lb-backend-pool",
            "loadbalancer_id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg/providers/Microsoft.Network/loadBalancers/mendedi-rg-lb",
            "name": "mendedi-rg-lb-backend-pool",
            "resource_group_name": "mendedi-rg"
          },
          "depends_on": [
            "azurerm_lb.mendedi-rg-lb",
            "azurerm_resource_group.mendedi-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "mendedi-rg-lb-http-probe",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg/providers/Microsoft.Network/loadBalancers/mendedi-rg-lb/probes/mendedi-rg-lb-http-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg/providers/Microsoft.Network/loadBalancers/mendedi-rg-lb",
            "name": "mendedi-rg-lb-http-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp",
            "resource_group_name": "mendedi-rg"
          },
          "depends_on": [
            "azurerm_lb.mendedi-rg-lb",
            "azurerm_resource_group.mendedi-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "mendedi-rg-lb-http-rule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg/providers/Microsoft.Network/loadBalancers/mendedi-rg-lb/backendAddressPools/mendedi-rg-lb-backend-pool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "frontend_ip_configuration_id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg/providers/Microsoft.Network/loadBalancers/mendedi-rg-lb/frontendIPConfigurations/mendedi-rg-lb-frontend-ip",
            "frontend_ip_configuration_name": "mendedi-rg-lb-frontend-ip",
            "frontend_port": 80,
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg/providers/Microsoft.Network/loadBalancers/mendedi-rg-lb/loadBalancingRules/mendedi-rg-lb-http-probe",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg/providers/Microsoft.Network/loadBalancers/mendedi-rg-lb",
            "name": "mendedi-rg-lb-http-probe",
            "probe_id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg/providers/Microsoft.Network/loadBalancers/mendedi-rg-lb/probes/mendedi-rg-lb-http-probe",
            "protocol": "Tcp",
            "resource_group_name": "mendedi-rg"
          },
          "depends_on": [
            "azurerm_lb.mendedi-rg-lb",
            "azurerm_lb_backend_address_pool.mendedi-rg-lb-backend-pool",
            "azurerm_lb_probe.mendedi-rg-lb-http-probe",
            "azurerm_resource_group.mendedi-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mendedi-rg-nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg/providers/Microsoft.Network/networkSecurityGroups/mendedi-rg-nsg",
            "location": "canadacentral",
            "name": "mendedi-rg-nsg",
            "resource_group_name": "mendedi-rg",
            "security_rule": [],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.mendedi-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mendedi-rg-nsg-rule-http",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg/providers/Microsoft.Network/networkSecurityGroups/mendedi-rg-nsg/securityRules/HTTP inbound",
            "name": "HTTP inbound",
            "network_security_group_name": "mendedi-rg-nsg",
            "priority": 100,
            "protocol": "TCP",
            "resource_group_name": "mendedi-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.mendedi-rg-nsg",
            "azurerm_resource_group.mendedi-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mendedi-rg-lb-public-ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "learning-tf-jayrm",
            "fqdn": "learning-tf-jayrm.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg/providers/Microsoft.Network/publicIPAddresses/mendedi-rg-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "mendedi-rg-public-ip",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "mendedi-rg",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.mendedi-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mendedi-rg-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg/providers/Microsoft.Network/virtualNetworks/mendedi-rg-vnet/subnets/mendedi-rg-subnet",
            "name": "mendedi-rg-subnet",
            "resource_group_name": "mendedi-rg",
            "virtual_network_name": "mendedi-rg-vnet"
          },
          "depends_on": [
            "azurerm_resource_group.mendedi-rg",
            "azurerm_virtual_network.mendedi-rg-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mendedi-rg-nsg-association",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg/providers/Microsoft.Network/virtualNetworks/mendedi-rg-vnet/subnets/mendedi-rg-subnet",
            "network_security_group_id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg/providers/Microsoft.Network/networkSecurityGroups/mendedi-rg-nsg",
            "subnet_id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg/providers/Microsoft.Network/virtualNetworks/mendedi-rg-vnet/subnets/mendedi-rg-subnet"
          },
          "depends_on": [
            "azurerm_network_security_group.mendedi-rg-nsg",
            "azurerm_subnet.mendedi-rg-subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg/providers/Microsoft.Network/virtualNetworks/mendedi-rg-vnet/subnets/mendedi-rg-subnet",
            "network_security_group_id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg/providers/Microsoft.Network/networkSecurityGroups/mendedi-rg-nsg",
            "subnet_id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg/providers/Microsoft.Network/virtualNetworks/mendedi-rg-vnet/subnets/mendedi-rg-subnet"
          },
          "depends_on": [
            "azurerm_network_security_group.mendedi-rg-nsg",
            "azurerm_subnet.mendedi-rg-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mendedi-rg-vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/22"
            ],
            "id": "/subscriptions/7b9bb5a0-79c7-4ce1-a100-1801e8f05013/resourceGroups/mendedi-rg/providers/Microsoft.Network/virtualNetworks/mendedi-rg-vnet",
            "location": "canadacentral",
            "name": "mendedi-rg-vnet",
            "resource_group_name": "mendedi-rg"
          },
          "depends_on": [
            "azurerm_resource_group.mendedi-rg"
          ]
        }
      ]
    }
  ]
}